--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -11,8 +11,6 @@ author_profile: true
 
 {% endif %}
 
-Soon to be published.
-
-<!-- {% for post in site.talks reversed %}
+{% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
-{% endfor %} -->
+{% endfor %}
