added excerpt to pages

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,6 +1,7 @@
 ---
 layout: archive
 title: "Talks and presentations"
+excerpt: "Publications that i have presented"
 permalink: /talks/
 author_profile: true
 ---
